update npm install

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "backend"
   ],
   "scripts": {
-    "install": "npm install --workspaces --no-audit --prefer-offline",
+    "install": "npm ci --workspaces --prefer-offline",
     "dev": "concurrently \"npm --prefix ./frontend run dev\" \"npm --prefix ./backend run dev\"",
     "build": "concurrently \"npm --prefix ./frontend run build\" \"npm --prefix ./backend run build\""
   },
