--- a/package.json
+++ b/package.json
@@ -16,19 +16,8 @@
     "d3": "^7.9.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
     "concurrently": "^9.0.1",
     "@types/lodash": "^4.17.12",
-    "typescript": "^5.6.3",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-notice": "^1.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vitest": "^0.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "typescript-eslint": "^8.7.0"
+    "typescript": "^5.6.3"
   }
 }
