--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "backend"
   ],
   "scripts": {
-    "lint": "npm run lint --workspaces",
+    "lint": "npm --workspace frontend run lint",
     "dev": "concurrently \"npm --prefix ./frontend run dev\" \"npm --prefix ./backend run dev\"",
     "build": "concurrently \"npm --prefix ./frontend run build\" \"npm --prefix ./backend run build\""
   },
