--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npm run test --workspaces",
     "prettier:check": "npm --workspace frontend run prettier:check",
     "dev": "concurrently \"npm --prefix ./frontend run dev\" \"npm --prefix ./backend run dev\"",
-    "build": "concurrently \"npm --prefix ./frontend run build\" \"npm --prefix ./backend run build\""
+    "build": "concurrently \"npm --prefix ./frontend run build\" \"npm --prefix ./backend run build\"",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "d3": "^7.9.0",
